[package]
name = "kresp"
version = "0.1.1"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "My simple and ergonomic Rust crate for working with the REdis Serialization Protocol (RESP)"
readme = "README.md"
repository = "https://github.com/KennethWilke/kresp"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
bstr = "0.2.17"
